--- a/dashboard/templates/dashboard/business_unit_overview.html
+++ b/dashboard/templates/dashboard/business_unit_overview.html
@@ -36,6 +36,8 @@
     </div>
 </div>
 
+{% include "dashboard/_offers_carousel.html" %}
+
 <div class="row g-3 mb-4">
     <div class="col-lg-5 reveal reveal-delay-1">
         <section class="chart-card p-3 h-100">
