--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             {% if unit_nav_items %}
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Productos
+                    Línea Comercial
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
                     {% for unit_item in unit_nav_items %}
